[tool.poetry]
name = "cpg_assistant"
version = "0.1.0"
description = "CPG Document Processing and QA System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langchain = "^0.1.0"
langchain-community = "^0.0.16"
langchain-openai = "^0.0.3"
openai = "^1.6.1"
chromadb = "^0.4.22"
loguru = "^0.7.2"
transformers = "^4.36.2"
torch = "2.2.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
unstructured = "^0.11.2"
sentence-transformers = "^2.2.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
ultralytics = "^8.0.0"
Pillow = "^10.1.0"
numpy = "^1.26.0"
PyMuPDF = "^1.23.8"
aiofiles = "^23.2.1"
timm = "^0.9.12"
pytesseract = "^0.3.13"
tesserocr = "^2.7.1"
opencv-python = "^4.10.0.84"
accelerate = "^0.26.1"
streamlit = "^1.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
